--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name ;
 
     location / {
-        proxy_pass http://app-container:your_app_port;
+        proxy_pass http://app-container:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
