--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,17 @@
-server {
+events {
+  worker_connections 1024:
+}
+
+http {
+  server {
     listen 80;
-    server_name ;
+    server_name nginx;
 
     location / {
-        proxy_pass http://app-container:80;
+        proxy_pass http://spring-petclinic:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    }   
+  }
 }
