--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
-events {
-  worker_connections 1024:
-}
-
 http {
   server {
     listen 80;
-    server_name nginx;
+    server_name $host;
 
     location / {
-        proxy_pass http://petclinic-app:8080;
+        set $ip_adress '';
+        if (-f "/home/ubuntu/ip-address.txt") {
+          set $ip_address "${ip_address}$(cat /home/ubuntu/ip-address.txt)";
+        }
+        proxy_pass http://$ip_adress:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
