--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -1,4 +1,6 @@
 version: '3.8'
+
+services:
   nginx:
     image: nginx
       volumes:
@@ -7,5 +9,3 @@ version: '3.8'
         - 80:80
       networks:
         - spring-petclinic_default
-      depends_on:
-        - petclinic-app
