--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -1,11 +1,17 @@
-version: '3.8'
+version: '3'
 
 services:
   nginx:
     image: nginx
-      volumes:
-        - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
-      ports:
-        - 80:80
-      networks:
-        - spring-petclinic_default
+    container_name: nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - spring-petclinic_default
+networks:
+  spring-petclinic_default:
+    external: true
