--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: always
     ports:
       - "8080:8080"
+    networks:
+      - spring-petclinic_default
     environment:
       - SPRING_PROFILES_ACTIVE=mysql
 
@@ -20,3 +22,8 @@ services:
       - MYSQL_USER=petclinic
       - MYSQL_PASSWORD=petclinic
       - MYSQL_DATABASE=petclinic
+    networks:
+      - spring-petclinic_default
+networks:
+  spring-petclinic_default:
+    external: true
