--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -9,7 +9,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf.template:/etc/nginx/nginx.conf.template
+      - ./ip-address.txt:/ip-address.txt
+    environment:
+      - - NGINX_SERVER_NAME=$(cat /ip-adress.txt)
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     networks:
       - spring-petclinic_default
 networks:
