--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -4,7 +4,6 @@ services:
   nginx:
     image: nginx
     container_name: nginx
-    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
@@ -12,7 +11,7 @@ services:
       - ./nginx.conf.template:/etc/nginx/nginx.conf.template
       - ./ip-address.txt:/ip-address.txt
     environment:
-      - - NGINX_SERVER_NAME=$(cat /ip-adress.txt)
+      - NGINX_SERVER_NAME=$(cat /ip-adress.txt)
     command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     networks:
       - spring-petclinic_default
