--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,4 +26,5 @@ services:
       - spring-petclinic_default
 networks:
   spring-petclinic_default:
-    name: spring-petclinic_default
+    external: true
+      name: spring-petclinic_default
