--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -13,3 +13,8 @@ services:
     environment:
       - NGINX_SERVER_NAME=$(cat /ip-adress.txt)
     command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+    networks:
+      - spring-petclinic_default
+
+networks:
+  spring-petclinic_default:
