--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -4,15 +4,19 @@ services:
   nginx:
     image: nginx
     container_name: nginx
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./nginx.conf.template:/etc/nginx/nginx.conf.template
       - ./ip-address.txt:/ip-address.txt
+      - ./cerbot/conf:/etc/letsencrypt
+      - ./cerbot/www:/var/www/cerbot
     environment:
       - NGINX_SERVER_NAME=$(cat /ip-adress.txt)
     command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     networks:
       - mysqlnet
     depends_on:
@@ -21,3 +25,13 @@ services:
 networks:
   mysqlnet:
     name: mysqlnet
+
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    restart: unless-stopped
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
