--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+lugins {
   id 'java'
   id 'org.springframework.boot' version '3.0.4'
   id 'io.spring.dependency-management' version '1.1.0'
