--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3'
+version: '3.8'
 services:
   petclinic:
     build: .
     container_name: petclinic-app
-    restart: always
+    restart: unless-stopped
     ports:
       - "8080:8080"
     environment:
@@ -14,7 +14,7 @@ services:
   mysqlserver:
     container_name: mysql-docker
     image: mysql:8.0
-    restart: always
+    restart: unless-stopped
     ports:
       - "3306:3306"
     environment:
