--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -5,7 +5,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name ${NGINX_SERVER_NAME};
+        server_name rossulbricht.fun www.rossulbricht.fun;
 
         location / {
             proxy_pass http://petclinic:8080;
