--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   nginx:
-    image: nginx
+    image: nginx:1.25.1-alpine
     container_name: nginx
     restart: unless-stopped
     volumes:
