--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -14,12 +14,12 @@ server {
 }
 
 server {
-    listen  443  ssl http2;
+    listen  443  ssl;
     server_name rossulbricht.fun;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/www.rossulbricht.fun/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.rossulbricht.fun/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/rossulbricht.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/rossulbricht.fun/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
