--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3"
 
 services:
   nginx:
@@ -30,3 +30,4 @@ services:
 networks:
   mysqlnet:
     name: mysqlnet
+    external: true
