--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 services:
   petclinic:
-    build: .
+    build: 
+      context: .
     container_name: petclinic-app
     restart: unless-stopped
     depends_on:
