--- a/docker-compose_nginx.yml
+++ b/docker-compose_nginx.yml
@@ -1,9 +1,9 @@
 version: "3"
 
 services:
-  nginx:
+  nginxserver:
     image: nginx:1.25.1-alpine
-    container_name: nginx
+    container_name: nginxserver
     restart: unless-stopped
     volumes:
       - ./conf.d:/etc/nginx/conf.d
